height fix for video overly on mobile

--- a/wp-content/themes/knight_wallace/assets/scss/_res.scss
+++ b/wp-content/themes/knight_wallace/assets/scss/_res.scss
@@ -17,4 +17,8 @@
             display: none;
         }
     }
+
+    .reveal-modal {
+        min-height:0 !important; 
+    }
 }
